Add AI Assistant v2 with session templates, cost tracking, and UX improvements (#85)
* Add design specification for AI Assistant Session Templates

Introduces the design for configurable session templates that allow the AI
Assistant to support arbitrary tasks beyond Axiom configuration. Templates
define system prompts, MCP servers, toolsets, allowed tools, working
directories, and welcome messages. Built-in templates ship as immutable
classpath resources; user-defined templates are stored in the database.

* Add implementation plan for session templates feature

* Add session_template database table and Panache entity

* Add SessionTemplateService with built-in config assistant template

* Add REST API and OpenAPI spec for session templates

* Wire session templates into assistant session lifecycle

* Add frontend API client for session templates

* Add template management pages under Configuration > AI Assistant

* Add template picker to session creation and conditional sidebar

* Improve assistant session list and template picker UX

Replace the 2-column card grid template picker with a searchable
single-column list that scales to large numbers of templates. Show the
template name in each session listing row. Rename the built-in template
to "Axiom Configuration Assistant".

* Separate session and working directories, use --system-prompt

Introduce a dedicated session directory (~/.axiom/assistant/sessions/<id>/)
for session metadata like mcp-config.json, separate from the Claude Code
working directory. Use --system-prompt CLI flag instead of writing CLAUDE.md.
Only delete the session directory on session end, leaving user-specified
working directories untouched.

* Add conversation persistence and improve dev.sh startup

Record user messages and welcome messages in the SSE event history so
the full conversation is replayed when a client reconnects or the page
is reloaded. Remove the separate template fetch for the welcome message
from the frontend — it now arrives